# ParseCrunchBase

./: .gitignore  pyproject.toml
src/: config.py  cookies.pkl  parser.py  writer.py
